# codespaces-test

./: README.md
.devcontainer/: devcontainer.json  setup.sh
demo_app/: README.md  pyproject.toml
demo_app/src/demo_app/: __init__.py  cli.py
