[project]
name = "demo-app"
version = "0.1.0"
description = "A slightly complex hello-world demo app with CLI"
readme = "README.md"
authors = [
    { name = "copilot-swe-agent[bot]", email = "198982749+Copilot@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
]

[project.scripts]
demo-app = "demo_app.cli:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
